tests/baselines/reference/indexWithoutParamType2.errors.txt
==== tests/cases/compiler/indexWithoutParamType2.ts (1 errors) ====
    class C {
        [x]: string
         ~
!!! error TS1022: An index signature parameter must have a type annotation.
    }